<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/app_background_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:scrollbarStyle="outsideOverlay" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/image_description_applogo"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >
            
            <Button
                android:id="@+id/btn_rest"
                style="@style/app_home_buttons"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@android:drawable/ic_dialog_map"
                android:text="REST DUMMY" />

            <Button
                android:id="@+id/btn_newbar"
                style="@style/app_home_buttons"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/icon_content_new_white"
                android:text="@string/button_new_bar" />

            <Button
                android:id="@+id/btn_search"
                style="@style/app_home_buttons"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/icon_action_search_white"
                android:text="@string/button_search" />

            <Button
                android:id="@+id/btn_radar"
                style="@style/app_home_buttons"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/icon_radar_white"
                android:text="@string/button_radar" />

            <Button
                android:id="@+id/btn_favorites"
                style="@style/app_home_buttons"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/icon_rating_important_white"
                android:text="@string/button_favorites" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>