<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp" 
    android:background="@drawable/list_item_selector">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="*"
        android:shrinkColumns="*"
        android:stretchColumns="1" >

        <TableRow>

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/image_bar_logo"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:orientation="vertical" >

                <!-- nome do estabelecimento -->

                <TextView
                    android:id="@+id/text_name"
                    style="@style/app_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bar_name" />

                <!-- endereco -->

                <TextView
                    android:id="@+id/text_address"
                    style="@style/app_normal_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/bar_address" />
            </LinearLayout>

            <!-- botao favorito -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/img_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button_favorite"
                    android:src="@drawable/rating_important" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>