<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay"
    style="@style/app_background_base" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
       style="@style/app_background_profile">


        <!-- bar -->

        <LinearLayout
            style="@style/app_profile_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- imagem -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/img_welcome"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:adjustViewBounds="false"
                    android:background="@color/app_background"
                    android:contentDescription="@string/image_bar_welcome_photo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bar_welcome" />

                <TextView
                    android:id="@+id/text_people"
                    style="@style/app_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/border_top_bottom"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="7dp"
                    android:paddingTop="3dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/bar_population" />
            </RelativeLayout>

            <!-- informações com padding -->

            <LinearLayout
                style="@style/app_profile_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <!-- logo, nome do estabelecimento, data de update e botao favorito -->

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:collapseColumns="*"
                    android:shrinkColumns="*"
                    android:stretchColumns="1" >

                    <TableRow>

                        <ImageView
                             android:id="@+id/img_logo"
                            android:layout_width="46dp"
                            android:layout_height="46dp"
                            android:layout_marginRight="4dp"
                            android:contentDescription="@string/image_bar_logo"
                            android:src="@drawable/bar_logo" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:orientation="vertical" >

                            <!-- nome do estabelecimento -->

                            <TextView
                                android:id="@+id/text_name"
                                style="@style/app_header_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bar_name" />

                            <!-- endereco -->

                            <TextView
                                android:id="@+id/text_address"
                                style="@style/app_normal_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bar_address" />

                            <!-- data de update -->

                            <TextView
                                android:id="@+id/text_last_modified"
                                style="@style/app_normal_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bar_last_modified"
                                android:textColor="@color/app_text_lightgrey" />
                        </LinearLayout>

                        <!-- botao favorito -->

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:gravity="right"
                            android:orientation="horizontal" >

                            <ImageButton
                                 android:id="@+id/btn_favorite"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:background="@drawable/list_item_selector"
                                android:contentDescription="@string/button_favorite"
                                android:src="@drawable/icon_rating_not_important" />
                        </LinearLayout>
                    </TableRow>
                </TableLayout>

                <!-- descricao -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_simple"
                    android:orientation="vertical"
                    android:paddingTop="5dp" >

                    
                    <!-- texto -->

                    <TextView
                        android:id="@+id/description_text"
                        style="@style/app_normal_text"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:text="@string/bar_description_text" />

                    <Button
                        android:id="@+id/btn_expandable"
                        style="@style/app_normal_text"
                        android:layout_width="fill_parent"
                        android:layout_height="32dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/app_small_box"
                        android:gravity="right|center_vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/button_expandable_more"
                        android:textAlignment="gravity"
                        android:textColor="@color/app_text_lightgrey" />
                </LinearLayout>

                <!-- botao laranja -->

                <Button
                    android:id="@+id/btn_checkin"
                    style="@style/app_home_buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/orange_button_selector"
                    android:text="@string/button_checkin"
                    android:drawableLeft="@drawable/icon_device_access_location_found_white" />

            </LinearLayout>
        </LinearLayout>       
    </LinearLayout>

</ScrollView>